# yt-api-rest-actix-web

./: Cargo.toml  Makefile.toml  README.md  reqs.http
mi-api/: Cargo.toml
mi-api/src/: lib.rs  main.rs  repository.rs  user.rs
mi-api/src/v1/: mod.rs  users.rs
migrations/: 20211106162229_init.sql
shuttle/: Cargo.toml  Secrets.dev.toml  Shuttle.toml
shuttle/src/: lib.rs
src/: health.rs  lib.rs  main.rs  repository.rs  user.rs
src/v1/: mod.rs  users.rs
